# px4_vision_hardware_cpp

./: CMakeLists.txt  README.md  package.xml  setup.cfg  setup.py
config/: apriltag.yaml  frames.yaml  mission_params.yaml
include/px4_vision_hardware_cpp/: mission_executor.hpp  search_landing_pad_mode.hpp  vision_landing_mode.hpp
launch/: apriltag_pipeline.launch.py  landing.launch.py
models/apriltag_36h11_11_150mm/: model.config  model.sdf
models/apriltag_36h11_19_50mm/: model.config  model.sdf
models/apriltag_36h11_23_400mm/: model.config  model.sdf
models/r1_rover/: model.sdf
models/r1_rover_with_apriltag/: model.config  model.sdf
px4_vision_hardware_cpp/: apriltag_relative_pose.py  gps_rover_enu_publisher.py  landing_director.py  mpc_solver_node.py  rover_relative_state_node.py  rover_state_ekf_node.py  tag_pose_kf.py  tag_rviz_markers.py  tf_state_logger.py
px4_vision_hardware_cpp/utils/: common.py  ekf_core.py  motion_models.py  mpc_tracker.py  noise_models.py
src/: apriltag_relative_pose.cpp  landing_data_logger.cpp  landing_director.cpp  main.cpp  mission_executor.cpp  search_landing_pad_mode.cpp  vision_landing_mode.cpp
tag_detection_analysis/: fov_calibration_1781618877.csv  fov_calibration_logger.py  plot_fov_calibration.py
worlds/: px4_vision_landing_moving_target.sdf
